FIX: changed overflow to hidden because scroll is ugly

--- a/css/app.css
+++ b/css/app.css
@@ -404,7 +404,7 @@ main section:not(.hero, .designit-section) {
     background-color: #F5F5F5;
     padding: 40px;
     height: calc(100vw / 3);
-    overflow: scroll;
+    overflow: hidden;
 }
 
 .designit-lg img {
